--- a/pyproject.toml
+++ b/pyproject.toml
@@ -70,7 +70,7 @@ python = "3.11.*"
 ultralytics = "^8.2.92"
 torch = "^2.4.1"
 fastapi = "^0.114.1"
-uvicorn = "^0.30.6"
+uvicorn = {extras = ["standard"], version = "^0.30.6"}
 python-multipart = "^0.0.9"
 pydantic = "1.10.2"
 
