--- a/pyproject.toml
+++ b/pyproject.toml
@@ -74,6 +74,7 @@ uvicorn = {extras = ["standard"], version = "^0.30.6"}
 python-multipart = "^0.0.9"
 pydantic = "1.10.2"
 numpy = "^1.9.0"
+pathlib = "^1.0.1"
 
 
 [tool.poetry.group.dev.dependencies]
