--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -1,18 +1,10 @@
-name: Test vegetables classification code
+name: pytest
 
 on:
   push:
-    branches:
-    - main
-    - develop
-    paths:
-    - projects/{{ vars.VEGETABLES_CLASSIFICATION }}/**
+    branches: [main, develop]
   pull_request:
-    branches:
-    - main
-    - develop
-    paths:
-    - projects/{{ vars.VEGETABLES_CLASSIFICATION }}/**
+    branches: [main, develop]
 
 variables:
 - template: /.github/workflows/vars/default-job-properties.template.yaml
