--- a/.github/workflows/pre-commit.yaml
+++ b/.github/workflows/pre-commit.yaml
@@ -26,8 +26,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip setuptools six wheel
-        pip install flake8 pre-commit pytest pytorch_lightning
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        pip install pre-commit
     - name: Test code with pre-commit
       run: |-
         # run pre-commit on all files
