--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -17,9 +17,11 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pytest
+          pip install poetry
+          poetry install --with dev
+
       - name: Test with pytest
-        run: pytest --doctest-modules --junitxml=junit/test-results.xml
+        run: poetry run pytest --doctest-modules --junitxml=junit/test-results.xml
       - name: Upload pytest test results
         uses: actions/upload-artifact@v4
         with:
