--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,6 +64,8 @@ version = "0.1.0"
 description = ""
 authors = ["Your Name <you@example.com>"]
 readme = "README.md"
+packages = [{ include = "object_detection_api" }]
+
 
 [tool.poetry.dependencies]
 python = "3.11.*"
