--- a/pyproject.toml
+++ b/pyproject.toml
@@ -75,6 +75,7 @@ python-multipart = "^0.0.9"
 pydantic = "1.10.2"
 numpy = "^1.9.0"
 pathlib = "^1.0.1"
+cvzone = "^1.6.1"
 
 
 [tool.poetry.group.dev.dependencies]
