--- a/pyproject.toml
+++ b/pyproject.toml
@@ -84,3 +84,5 @@ jupyter = "^1.1.1"
 pytest = "^7.1.1"
 pytest-cov = "^3.0.0"
 pytest-clarity = "^1.0.1"
+pafy = "^0.5.5"
+youtube-dl = "^2021.12.17"
